FILE(GLOB alut_SRCS src/*.c scr/*.h)

ADD_DEFINITIONS(-DALUT_BUILD_LIBRARY)
IF(OS STREQUAL "windows")
ADD_DEFINITIONS(-DHAVE_SLEEP -DHAVE_WINDOWS_H -DHAVE__STAT)
ENDIF(OS STREQUAL "windows")
IF(OS STREQUAL "linux")
ADD_DEFINITIONS(-DHAVE_NANOSLEEP -DHAVE_TIME_H -DHAVE_STDINT_H -DHAVE_STAT -DHAVE_UNISTD_H)
ENDIF(OS STREQUAL "linux")

ADD_LIBRARY(alut
${alut_SRCS}
)
