FILE(GLOB alut_SRCS src/*.c scr/*.h)

ADD_DEFINITIONS(-DALUT_BUILD_LIBRARY)
IF(OS STREQUAL "windows")
ADD_DEFINITIONS(-DHAVE_SLEEP -DHAVE_WINDOWS_H -DHAVE__STAT)
ENDIF(OS STREQUAL "windows")
IF(OS STREQUAL "linux" OR OS STREQUAL "qnx" OR OS STREQUAL "android")
ADD_DEFINITIONS(-DHAVE_NANOSLEEP -DHAVE_TIME_H -DHAVE_STDINT_H -DHAVE_STAT -DHAVE_UNISTD_H)
ENDIF(OS STREQUAL "linux" OR OS STREQUAL "qnx" OR OS STREQUAL "android")

ADD_LIBRARY(alut
${alut_SRCS}
)
